# SadaLogger

./: .gitignore  CMakeLists.txt  README.md  package.sh  run_tests.sh
.github/workflows/: cmake.yml
src/: Logger.cpp  Logger.hpp
tests/: CMakeLists.txt  LoggerGTest.cpp  LoggerTest.cpp
